--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <app-header></app-header>
   <app-side-left></app-side-left>
   <div class="app-main">
-    <router-outlet />
+    <router-outlet></router-outlet>
   </div>
 </main>
 <app-login *ngIf="isLoginPage()"></app-login>
