--- a/src/app/shared/side-left/side-left.component.html
+++ b/src/app/shared/side-left/side-left.component.html
@@ -1,8 +1,8 @@
 <div class="side-left">
     <div class="nav">
         <ul>
-            <li><i class="fa-solid fa-chart-simple"></i>Dashboard</li>
-            <li><i class="fa-solid fa-user"></i>Users</li>
+            <li (click)="DashboardPage()"><i class="fa-solid fa-chart-simple"></i>Dashboard</li>
+            <li (click)="UsersPage()"><i class="fa-solid fa-user"></i>Users</li>
             <li><i class="fa-solid fa-gamepad"></i>Game</li>
             <li><i class="fa-solid fa-chart-pie"></i>Statics</li>
             <li><i class="fa-solid fa-money-check-dollar"></i>Atm</li>
