--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -13,16 +13,16 @@
             <div class="avatar-profile">
                 <img src="https://htmlstream.com/front-dashboard/assets/img/160x160/img6.jpg" alt="">
             </div>
-            <div class="name-profile">Anh Thanh Dz</div>
+            <div class="name-profile">{{fullName}}</div>
             <div class="time-join"><i class="fa-solid fa-calendar-days"></i>07/05/2025</div>
         </div>
         <div class="content-profile">
             <div class="left-profile card">
                 <div class="title">Profile</div>
                 <div class="col">
-                    <span><i class="fa-solid fa-circle-user"></i>tk</span>
-                    <span><i class="fa-solid fa-lock"></i>mk</span>
-                    <span><i class="fa-solid fa-money-bills"></i>money</span>
+                    <span><i class="fa-solid fa-circle-user" style="padding: 2px;margin-right: 5px;"></i>Tài khoản : {{tk}}</span>
+                    <span><i class="fa-solid fa-lock" style="padding: 2px;margin-right: 5px;"></i>Mật khẩu : {{mk}}</span>
+                    <span><i class="fa-solid fa-money-bills" style="padding: 2px;margin-right: 5px;"></i>Money : {{money}}</span>
                     <span></span>
                 </div>
             </div>
@@ -34,7 +34,7 @@
                     <p><i class="fa-solid fa-down-long" style="color: #ef0b0b;"></i>-1000$</p>
                     <p><i class="fa-solid fa-up-long" style="color: #26f2b2;"></i> +1000$</p>
                 </div>
-                <ul>
+                <ul class="list-game">
                     <li>Reng Reng : <span><i class="fa-solid fa-down-long" style="color: #ef0b0b;"></i>-1000$</span> <span><i class="fa-solid fa-up-long" style="color: #26f2b2;"></i> +1000$</span></li>
                     <li>Tài xỉu : <span><i class="fa-solid fa-down-long" style="color: #ef0b0b;"></i>-1000$</span> <span><i class="fa-solid fa-up-long" style="color: #26f2b2;"></i> +1000$</span></li>
                     <li>Slot 777 : <span><i class="fa-solid fa-down-long" style="color: #ef0b0b;"></i>-1000$</span> <span><i class="fa-solid fa-up-long" style="color: #26f2b2;"></i> +1000$</span></li>
