--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,9 +1,9 @@
 <div class="row-info">
     <div class="total-user card ">
         <p>total users</p>
-        <span>4</span>
+        <span>{{sumUser}}</span>
     </div>
-    <div class="btn-add">
+    <div class="btn-add" (click)="addUser()">
         <i class="fa-solid fa-user-plus"></i>Add User
     </div>
 </div>
@@ -69,10 +69,6 @@
                           </div>
                         </div>
                       </div>
-                      
-                      
-                      
-                      
                 </div>
             </div>
             <div class="active-profile card">
@@ -80,23 +76,33 @@
                     Active
                 </div>
                 <div class="overview card">
-                    <p><i class="fa-solid fa-down-long" style="color: #ef0b0b;"></i>-1000$</p>
-                    <p><i class="fa-solid fa-up-long" style="color: #26f2b2;"></i> +1000$</p>
+                  <p class="lose">
+                    <span class="label">Tổng tiền thua:</span>
+                    <i class="fa-solid fa-down-long"></i> -{{ sumAlllost }}$
+                  </p>
+                  <p class="win">
+                    <span class="label">Tổng tiền thắng:</span>
+                    <i class="fa-solid fa-up-long"></i> +{{ sumAllWin }}$
+                  </p>
                 </div>
+                
                 <ul class="list-game">
-                    <li>Reng Reng : <span><i class="fa-solid fa-down-long" style="color: #ef0b0b;"></i>-1000$</span>
-                        <span><i class="fa-solid fa-up-long" style="color: #26f2b2;"></i> +1000$</span>
-                    </li>
-                    <li>Tài xỉu : <span><i class="fa-solid fa-down-long" style="color: #ef0b0b;"></i>-1000$</span>
-                        <span><i class="fa-solid fa-up-long" style="color: #26f2b2;"></i> +1000$</span>
-                    </li>
-                    <li>Slot 777 : <span><i class="fa-solid fa-down-long" style="color: #ef0b0b;"></i>-1000$</span>
-                        <span><i class="fa-solid fa-up-long" style="color: #26f2b2;"></i> +1000$</span>
-                    </li>
-                    <li>Spaceman : <span><i class="fa-solid fa-down-long" style="color: #ef0b0b;"></i>-1000$</span>
-                        <span><i class="fa-solid fa-up-long" style="color: #26f2b2;"></i> +1000$</span>
-                    </li>
+                  <li class="game-row">
+                    <div class="game-title">Reng Reng:</div>
+                    <div class="game-stats">
+                      <span class="lose"><i class="fa-solid fa-down-long"></i> -{{ sumRengLose }}$</span>
+                      <span class="win"><i class="fa-solid fa-up-long"></i> +{{ sumRengWin }}$</span>
+                    </div>
+                  </li>
+                  <li class="game-row">
+                    <div class="game-title">Tài xỉu:</div>
+                    <div class="game-stats">
+                      <span class="lose"><i class="fa-solid fa-down-long"></i> -{{ sumClLose }}$</span>
+                      <span class="win"><i class="fa-solid fa-up-long"></i> +{{ sumClWin }}$</span>
+                    </div>
+                  </li>
                 </ul>
+                
             </div>
         </div>
     </div>
