--- a/src/app/shared/side-left/side-left.component.html
+++ b/src/app/shared/side-left/side-left.component.html
@@ -6,6 +6,7 @@
             <li><i class="fa-solid fa-gamepad"></i>Game</li>
             <li><i class="fa-solid fa-chart-pie"></i>Statics</li>
             <li><i class="fa-solid fa-money-check-dollar"></i>Atm</li>
+            <li (click)="logout()"><i class="fa-solid fa-money-check-dollar"></i>Logout</li>
         </ul>
     </div> 
 </div>
