--- a/src/app/add-users/add-users.component.html
+++ b/src/app/add-users/add-users.component.html
@@ -1,3 +1,25 @@
 <div class="contend">
-    <p>Đây là đăng kí</p>
+    <h2>THÊM TÀI KHOẢN USER</h2>
+    <form action="#" method="post">
+        <label for="username">Tài khoản:</label>
+        <input type="text" id="username" name="username" #username required><br><br>
+      
+        <label for="password">Mật khẩu:</label>
+        <input type="password" id="password" name="password" #password required><br><br>
+      
+        <label for="fullname">Họ và tên:</label>
+        <input type="text" id="fullname" name="fullname" #fullname required><br><br>
+      
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" #email required><br><br>
+      
+        <label for="stk">Số tài khoản:</label>
+        <input type="text" id="stk" name="stk" #stk ><br><br>
+      
+        <label for="balance">Số tiền trong tài khoản:</label>
+        <input type="number" id="balance" name="balance" value="5000" #balance readonly><br><br>
+      
+        <button type="button" (click)="AddUser()">THÊM USER</button>
+      </form>
+      
 </div>
