Tien thang thua

--- a/src/app/add-users/add-users.component.html
+++ b/src/app/add-users/add-users.component.html
@@ -13,11 +13,11 @@
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" #email required><br><br>
       
-        <label for="stk">Số tài khoản:</label>
+        <!-- <label for="stk">Số tài khoản:</label>
         <input type="text" id="stk" name="stk" #stk ><br><br>
       
         <label for="balance">Số tiền trong tài khoản:</label>
-        <input type="number" id="balance" name="balance" value="5000" #balance readonly><br><br>
+        <input type="number" id="balance" name="balance" value="5000" #balance readonly><br><br> -->
       
         <button type="button" (click)="AddUser()">THÊM USER</button>
       </form>
