--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -27,33 +27,22 @@
         </div>
         <div class="statics-game">
             <div class="col-game card ">
-                <img src="slot777.jfif" alt="">
+                <img src="chanle.jfif" alt="">
                 <div class="parameter">
-                    <p><i class="fa-solid fa-up-long" style="color: #26f2b2;"></i> +1000$</p>
+                    <p><i class="fa-solid fa-up-long" style="color: #26f2b2;"></i>{{winT}}</p>
+                    <p><i class="fa-solid fa-down-long" style="color: #ef0b0b;"></i>{{loseT}}</p>
                     <span></span>
                 </div>
             </div>
             <div class="col-game card">
                 <img src="rengreng.jfif" alt="">
                 <div class="parameter">
-                    <p><i class="fa-solid fa-down-long" style="color: #ef0b0b;"></i>-1000$</p>
+                    <p><i class="fa-solid fa-up-long" style="color: #26f2b2;"></i>{{winR}}</p>
+                    <p><i class="fa-solid fa-down-long" style="color: #ef0b0b;"></i>{{loseR}}</p>
                     <span></span>
                 </div>
             </div>
-            <div class="col-game card">
-                <img src="spaceman.jfif" alt="">
-                <div class="parameter">
-                    <p></p>
-                    <span></span>
-                </div>
-            </div>
-            <div class="col-game card">
-                <img src="chanle.jfif" alt="">
-                <div class="parameter">
-                    <p></p>
-                    <span></span>
-                </div>
-            </div>
+            
         </div>
         <div class="statics-user card">
             <div class="head-user">
